Revert "feature:components"
This reverts commit cec8d3d7d95831d4125d4e8aebb828f6ab8ac0a1.

误操作提交上了master，先revert

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,2 @@
-<app-pix-button [hint]='buttonHint' (clickButton)='onButton()'></app-pix-button>
-<!--  提示按钮  -->
-<app-pix-tag [tooltipTextOne]="tipText1" [tooltipTextTwo]="tipText2"></app-pix-tag>
-<!-- 功能提示 -->
-
-<app-pix-listbox [addData]='addData' [addTitle]='addTitle' (onChange)='getFeature($event)'> </app-pix-listbox>
-
-
-<app-pix-input [inputValue]='getInputValue' [label]='inputPlaceholder' (onChange)='changeValue($event)'>
-</app-pix-input>
-<!-- 输入框  status=1   -->
-<app-pix-dropdown [perpectiveItem]='perpectiveItem' (onChange)='getOnChangedValue($event)'>
-</app-pix-dropdown>
-<!-- 下拉菜单  status=1 -->
-
-<app-pix-form [coordinate]='showData' [label]="formHeader" (onChange)="logCoordinate($event)">
-</app-pix-form>
+<app-pix-button></app-pix-button>
+<app-pix-tag></app-pix-tag>
