--- a/src/app/components/pix-dropdown/pix-dropdown.component.html
+++ b/src/app/components/pix-dropdown/pix-dropdown.component.html
@@ -9,4 +9,4 @@
     </ul>
   </div>
 </div>
-<div [hidden]="!isShow" (click)="hidden()" [ngClass]="{'shade': isShow,'shade-z-index':zIndex}"></div>
+<div [hidden]="!isShow" (click)="hidden()" [ngClass]="{'mask-layer': isShow,'shade-z-index':zIndex}"></div>
