--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,31 @@
-<app-pix-button [hint]='buttonHint' (clickButton)='onButton()'></app-pix-button>
-<!--  提示按钮  -->
-<app-pix-tag [tooltipTextOne]="tipText1" [tooltipTextTwo]="tipText2"></app-pix-tag>
+<!-- <app-pix-tag [title]='info' [childState]="stateText" [childUse]="useText" [tag]='bottonText'></app-pix-tag> -->
 <!-- 功能提示 -->
+<!-- <app-pix-button [hint]='buttonHint' (clickButton)='onButton()' [positionStyle]='position'></app-pix-button> -->
 
-<app-pix-listbox [addData]='addData' [addTitle]='addTitle' (onChange)='getFeature($event)'> </app-pix-listbox>
+<!--  提示按钮  -->
 
 
-<app-pix-input [inputValue]='getInputValue' [label]='inputPlaceholder' (onChange)='changeValue($event)'>
-</app-pix-input>
+<!-- <app-pix-listbox [addData]='addData' [addTitle]='addTitle' (onChange)='getFeature($event)'> </app-pix-listbox> -->
+
+
+
+<!-- <app-pix-input [inputValue]='getInputValue' [label]='inputPlaceholder' (onChange)='changeValue($event)'></app-pix-input> -->
+
 <!-- 输入框  status=1   -->
-<app-pix-dropdown [perpectiveItem]='perpectiveItem' (onChange)='getOnChangedValue($event)'>
-</app-pix-dropdown>
+<!-- <app-pix-dropdown [perpectiveItem]='perpectiveItem' (onChange)='getOnChangedValue($event)'>
+</app-pix-dropdown> -->
 <!-- 下拉菜单  status=1 -->
 
-<app-pix-form [coordinate]='showData' [label]="formHeader" (onChange)="logCoordinate($event)">
-</app-pix-form>
+<!-- <app-pix-form [coordinate]='showData' [label]="formHeader" (onChange)="logCoordinate($event)">
+</app-pix-form> -->
+
+<!-- form  表单 -->
+
+<!-- <app-pix-progress-bar></app-pix-progress-bar> -->
+<!-- 进度条 -->
+
+<app-pix-preview></app-pix-preview>
+<!-- 文件预览 -->
+
+<!-- <app-pix-tree></app-pix-tree> -->
+<!--树状图  测试版 -->
