--- a/src/app/components/pix-button/pix-button.component.html
+++ b/src/app/components/pix-button/pix-button.component.html
@@ -1,5 +1,7 @@
 <div class="button-tip">
   <button class="button-style" (click)="onclick()" (mouseenter)="enterButton($event)"
     (mouseleave)="leaveButton()">STORE</button>
-  <p [ngClass]="{'hint-top': top,'hint-bottom':bottom}" [hidden]="isShow">{{hint}}</p>
+  <p class="hint-text-style" [ngClass]="{'hint-top': top,'hint-bottom':bottom,'hint-left':left,'hint-right':right }"
+    [hidden]="isShow">{{hint}}
+  </p>
 </div>
