--- a/src/app/components/pix-dropdown/pix-dropdown.component.scss
+++ b/src/app/components/pix-dropdown/pix-dropdown.component.scss
@@ -27,7 +27,6 @@
   .perspective:hover {
     background-color: #323d3f;
     color: white;
-
   }
 
   .bgColor {
@@ -54,7 +53,6 @@
       li:hover {
         color: white;
         background-color: #323d3f;
-
       }
 
       .bgColor {
@@ -69,13 +67,12 @@
   }
 }
 
-.shade {
+.mask-layer {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  //   background-color: cadetblue;
 }
 
 .dom-z-index {
