--- a/src/app/components/pix-listbox/pix-listbox.component.scss
+++ b/src/app/components/pix-listbox/pix-listbox.component.scss
@@ -11,27 +11,28 @@
   width: 300px;
   height: 32px;
   background-color: #2C393C;
+  border: 1px solid #2c393c;
   border-radius: 3px;
 
   .title {
-    width: 299px;
-    height: 31px;
+    width: 298px;
+    height: 30px;
     color: #B1B8BA;
     font-size: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 3px;
   }
 
   .title:hover {
     color: white;
-    border: 1px solid #734E31;
     background-color: #2C393C;
   }
 
   .add-data {
     position: absolute;
-    top: 32px;
+    top: 31px;
     left: 50%;
     transform: translateX(-50%);
     background-color: #20292B;
@@ -55,20 +56,26 @@
       li:hover {
         background-color: #5B7073;
         color: #FFFFFF;
+
       }
     }
   }
 }
 
-.hidden {
+.drop-down-list:hover {
+  border: 1px solid #734E31;
+  color: red;
+}
+
+.mask-layer {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 999;
-  //   background-color: black;
 }
+
 
 .dom-z-index {
   z-index: 999;
