chore: 增加production编译命令；提交到npm

--- a/src/app/components/pix-form/pix-form.component.html
+++ b/src/app/components/pix-form/pix-form.component.html
@@ -1,8 +1,8 @@
 <div class="input-box">
   <p>
     <span>{{label}}</span>
-    <app-pix-input *ngFor="let item of coordinate" [label]='item.name' [inputValue]="item.inputValue"
+    <!-- <app-pix-input *ngFor="let item of coordinate" [label]='item.name' [inputValue]="item.inputValue"
       (onChange)="changeData($event)">
-    </app-pix-input>
+    </app-pix-input> -->
   </p>
 </div>
