fix:组件功能完善

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,16 +16,11 @@
 </app-pix-dropdown> -->
 <!-- 下拉菜单  status=1 -->
 
-<!-- <app-pix-form [coordinate]='showData' [label]="formHeader" (onChange)="logCoordinate($event)">
-</app-pix-form> -->
-
-<!-- form  表单 -->
-
 <!-- <app-pix-progress-bar></app-pix-progress-bar> -->
 <!-- 进度条 -->
 
 <app-pix-preview></app-pix-preview>
 <!-- 文件预览 -->
 
-<!-- <app-pix-tree></app-pix-tree> -->
-<!--树状图  测试版 -->
+<!-- <app-pix-edit-picture></app-pix-edit-picture> -->
+<!-- 图片预览 -->
