--- a/src/app/components/pix-preview/pix-preview.component.scss
+++ b/src/app/components/pix-preview/pix-preview.component.scss
@@ -1,4 +1,6 @@
 .position {
+  position: relative;
+
   .outer-box {
     left: 0;
     top: 0;
@@ -9,6 +11,7 @@
     flex-direction: column;
     color: #b1b8ba;
     font-size: 12px;
+
     .top-box {
       width: 100%;
       height: 35px;
@@ -20,26 +23,31 @@
       div {
         height: 100%;
         display: flex;
+
         .icon-size {
           font-size: 5px;
         }
       }
+
       div:nth-child(1) {
         padding-right: 20px;
         border-right: 1px solid #232e30;
         display: flex;
         align-items: center;
+
         span {
           display: inline-flex;
           justify-content: center;
           align-items: center;
           width: 90px;
           font-size: 12px;
+
           i {
             margin-right: 10px;
             color: #ff6600;
           }
         }
+
         p:nth-child(2),
         p:nth-child(3),
         p:nth-child(4) {
@@ -50,19 +58,27 @@
           align-items: center;
           border: 1px solid #232e30;
           margin-right: 10px;
+
           i {
             font-size: smaller;
             font-weight: 900;
           }
         }
+
+        .icon-border {
+          border: 1px solid #293538;
+        }
+
         .icon-border:hover {
           border: 1px solid #543f2d;
         }
       }
+
       div:nth-child(2) {
         display: flex;
         align-items: center;
         border-right: 1px solid #232e30;
+
         p {
           width: 18px;
           height: 18px;
@@ -71,15 +87,18 @@
           align-items: center;
           border: 1px solid #232e30;
           margin: 0px 10px;
+
           i {
             font-size: smaller;
             font-weight: 900;
           }
         }
+
         .icon-border:hover {
           border: 1px solid #543f2d;
         }
       }
+
       .all {
         display: flex;
         justify-content: center;
@@ -92,6 +111,7 @@
         align-items: center;
         margin-right: 20px;
         width: 235px;
+
         input {
           background-color: #2c393c;
           height: 70%;
@@ -101,14 +121,17 @@
           padding-left: 10px;
           color: #cacaca;
         }
+
         input:focus {
           background-color: #20292b;
         }
+
         input:hover {
           border: 1px solid #543f2d;
         }
       }
     }
+
     .bottom-box {
       flex: 1;
       display: flex;
@@ -120,6 +143,7 @@
         border-right: 1px solid #232e30;
         overflow: auto;
       }
+
       .detail-file {
         height: 180px;
         flex: 1;
@@ -133,6 +157,7 @@
           align-items: center;
           overflow: hidden;
           flex-wrap: wrap;
+
           li {
             width: 120px;
             height: 80px;
@@ -140,14 +165,28 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            outline: white;
+
             i {
               font-size: 40px;
             }
+
             span {
               font-size: 14px;
             }
           }
+
+          .demo:focus {
+            color: #F86600;
+            // background-color: red;
+          }
+
+          li:hover {
+            background-color: #293538;
+            color: white;
+          }
         }
+
         .gird-view-small {
           display: flex;
           justify-content: flex-start;
@@ -155,6 +194,7 @@
           overflow: hidden;
           flex-wrap: wrap;
           padding: 0px 5px;
+
           li {
             width: 85px;
             height: 70px;
@@ -163,14 +203,22 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+
             i {
               font-size: 30px;
             }
+
             span {
               font-size: 12px;
             }
           }
+
+          li:hover {
+            background-color: #293538;
+            color: white;
+          }
         }
+
         .gird-list {
           display: flex;
           justify-content: center;
@@ -179,6 +227,7 @@
           overflow: hidden;
           flex-wrap: wrap;
           padding: 0px 5px;
+
           li {
             padding-left: 10px;
             height: 30px;
@@ -186,25 +235,42 @@
 
             align-items: center;
             overflow: hidden;
+
             i {
               font-size: 12px;
               color: #b1b1b1;
             }
+
             span {
               font-size: 14px;
               margin-left: 8px;
               color: #b1b1b1;
             }
           }
+
+          li:hover {
+            background-color: #293538;
+
+            i {
+              color: white;
+            }
+
+            span {
+              color: white;
+            }
+          }
         }
       }
+
       .scroll-style::-webkit-scrollbar {
         width: 8px;
         background-color: #20292b;
       }
+
       .scroll-style::-webkit-scrollbar-thumb {
         background-color: #5b7073;
       }
+
       .scroll-style::-webkit-scrollbar-thumb:hover {
         background-color: #ff6600;
       }
@@ -216,8 +282,10 @@
       }
     }
   }
+
   .show {
     display: none;
+
     p {
       height: 34px;
       width: 90px;
@@ -225,6 +293,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
       span {
         display: inline-flex;
         justify-content: center;
@@ -232,6 +301,7 @@
         width: 80px;
         font-size: 12px;
         color: #b1b8ba;
+
         i {
           font-size: 5px;
           margin-right: 10px;
@@ -240,29 +310,92 @@
       }
     }
   }
+
   .tree-hidden {
     display: none;
   }
+
   .active-show {
     display: block;
   }
-  
+
+  .message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+
+    div {
+      width: 400px;
+      height: 120px;
+      background-color: #364346;
+
+      p:nth-child(1) {
+        height: 71px;
+        color: white;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        border-bottom: 1px solid #232E30;
+        padding: 0px 30px;
+        font-size: 12px;
+      }
+
+      p:nth-child(2) {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding-right: 15px;
+        height: 50px;
+
+        button {
+          width: 85px;
+          height: 22px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          color: white;
+          text-align: center;
+          font-size: 12px;
+          border: none;
+        }
+
+        button:nth-child(1) {
+          background-color: #DB5800;
+          margin-right: 10px;
+        }
+
+        button:nth-child(2) {
+          background-color: #2C393C;
+        }
+      }
+    }
+  }
+
+  .delete-confirm {
+    display: block;
+  }
 }
 
 // 样式穿透
 :host ::ng-deep {
   .p-tree-selectable {
-    height: 173px;
+    height: 178px;
     padding: 0;
     background-color: #293538;
     border: none;
+    text-align: center;
     color: #b1b8ba;
     display: flex;
     flex-direction: column;
+
     .p-tree-wrapper {
       flex: 1;
+
       ul {
         height: 100%;
+
         li {
           .p-treenode-content {
             height: 23px;
@@ -272,19 +405,25 @@
       }
     }
   }
+
   .p-tree-container {
     overflow: auto;
   }
+
   .p-tree-container::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
     background-color: #20292b;
   }
+
   .p-tree-container::-webkit-scrollbar-thumb {
     background-color: #5b7073;
   }
+
   .p-tree-container::-webkit-scrollbar-thumb:hover {
     background-color: #ff6600;
   }
+
   /* 右键弹出框样式 */
   .p-contextmenu {
     background-color: #20292b;
@@ -292,90 +431,76 @@
     font-size: 13px;
     width: auto;
   }
-  .p-contextmenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
+
+  .p-contextmenu .p-menuitem.p-menuitem-active>.p-menuitem-link {
     background-color: #5b7073;
     color: white;
   }
-  .p-contextmenu
-    .p-menuitem.p-menuitem-active
-    > .p-menuitem-link
-    .p-menuitem-text {
+
+  .p-contextmenu .p-menuitem.p-menuitem-active>.p-menuitem-link .p-menuitem-text {
     color: #d1cfe1;
   }
-  .p-contextmenu
-    .p-menuitem.p-menuitem-active
-    > .p-menuitem-link
-    .p-menuitem-icon {
+
+  .p-contextmenu .p-menuitem.p-menuitem-active>.p-menuitem-link .p-menuitem-icon {
     color: #d1cfe1;
   }
+
   /* 鼠标点击经过之类的样式修改 */
-  .p-tree
-    .p-tree-container
-    .p-treenode
-    .p-treenode-content
-    .p-tree-toggler:enabled:hover:focus {
+  .p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:enabled:hover:focus {
     box-shadow: none;
   }
-  .p-tree
-    .p-tree-container
-    .p-treenode
-    .p-treenode-content
-    .p-tree-toggler:enabled:hover {
+
+  .p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:enabled:hover {
     color: #cfcfcf;
     border-color: transparent;
     background: none;
   }
-  .p-tree
-    .p-tree-container
-    .p-treenode
-    .p-treenode-content.p-treenode-selectable:not(.p-highlight):hover {
+
+  .p-tree .p-tree-container .p-treenode .p-treenode-content.p-treenode-selectable:not(.p-highlight):hover {
     background-color: #2c393c;
     color: white;
   }
+
   .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight {
     background: none;
     color: #ff6600;
+
     .p-treenode-icon {
       color: #ff6600;
     }
   }
+
   .p-tree .p-tree-container .p-treenode .p-treenode-content:focus {
     box-shadow: none;
   }
+
   .p-tree .p-tree-container .p-treenode .p-treenode-content .p-treenode-icon {
     color: #b1b8ba;
   }
-  .p-tree
-    .p-tree-container
-    .p-treenode
-    .p-treenode-content
-    .p-tree-toggler:focus {
+
+  .p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler:focus {
     box-shadow: none;
   }
+
   .p-tree .p-tree-container .p-treenode .p-treenode-content .p-tree-toggler {
     width: auto;
     margin-right: 10px;
   }
+
   .p-treenode-icon {
     font-size: 8px;
   }
+
   .p-tree-toggler-icon {
     font-size: 8px;
   }
 
   /* 获得焦点测试 */
-  .p-tree
-    .p-tree-container
-    .p-treenode
-    .p-treenode-content.p-highlight
-    .p-tree-toggler {
+  .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight .p-tree-toggler {
     color: white;
   }
-  .p-tree
-    .p-tree-container
-    .p-treenode
-    .p-treenode-content.p-highlight
-    .p-treenode-icon:hover {
+
+  .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight .p-treenode-icon:hover {
     color: #ff6600;
   }
 
@@ -392,10 +517,12 @@
     border: 1px solid #232e30;
     // margin-top: 5px;
   }
+
   .p-dropdown:hover {
     border: 1px solid #543f2d;
     background-color: #232e30;
   }
+
   .p-dropdown-trigger {
     // width: 150px;
     display: flex;
@@ -409,19 +536,27 @@
     background-color: #20292b;
     border: 1px solid #543f2d;
   }
+
   .p-dropdown-items-wrapper {
     background-color: #293538;
     color: #bbc4ce;
     font-size: 13px;
     color: #2c393c;
   }
+
+  .p-tree-selectable .p-tree-wrapper ul {
+    width: 199px;
+  }
+
   .p-dropdown-items-wrapper::-webkit-scrollbar {
     width: 8px;
     background-color: #20292b;
   }
+
   .p-dropdown-items-wrapper::-webkit-scrollbar-thumb {
     background-color: #5b7073;
   }
+
   .p-dropdown-items-wrapper::-webkit-scrollbar-thumb:hover {
     background-color: #ff6600;
   }
@@ -431,9 +566,11 @@
     height: 28px;
     padding: 5px 10px;
   }
+
   .p-dropdown-panel .p-dropdown-items:not(.p-dropdown-virtualscroll) {
     padding: 0;
   }
+
   .p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
     background-color: #20292b;
     color: white;
@@ -442,13 +579,13 @@
     margin: 0;
     //   padding-left: 10px;
   }
+
   .p-dropdown .p-dropdown-label {
     color: #bbc4ce;
     font-size: 13px;
   }
-  .p-dropdown-panel
-    .p-dropdown-items
-    .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+
+  .p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
     color: #bbc4ce;
     background-color: #20292b;
   }
@@ -469,57 +606,38 @@
     padding-right: 10px;
     text-align: center;
   }
+
+  .p-contextmenu .p-submenu-list {
+    background-color: #20292b;
+  }
+
   .p-inputtext:enabled:focus {
     box-shadow: none;
   }
+
   .p-inputtext:enabled:hover {
     background-color: #232e30;
   }
+
   .p-component * {
     font-size: 12px;
-}
-// .pi-chevron-right::before {
-//     content: "\e90d";
-//     font-weight: 900;
-// }
-// .pi-chevron-down:before {
-//   content: "\e90f";
-//   font-weight: 900;
-// }
-.p-tree-selectable {
-    text-align: center;
-}
+  }
 
-// .p-tree-toggler-icon::before{
-//     content: "\e90d";
-// }
-// .p-tree-toggler-icon::after{
-//     content: "\e90f";
-// }
-.fa-caret-right::before {
+  .pi-chevron-right::before {
+    content: "\e90d";
+    font-weight: 900;
+  }
+
+  .pi-chevron-down:before {
     content: "\e90f";
-  }
-  .fa-caret-down::before {
-    content: "\F068";
+    font-weight: 900;
   }
 
-  
-   // 删除确认框
-   .p-button.p-button-sm{
-       padding: 5px;
-   }
+  // .p-tree-selectable {
+  //   text-align: center;
+  // }
 
-
-   .p-confirm-popup .p-confirm-popup-content{
-     padding: 20px;
-     color: red;
-   }
-
-   .ui-dialog { 
-    background-color: #fff; 
-} 
-}
-.meaasge{
-    color: red;
-    background-color: red;
+  .pi-chevron-down:before {
+    content: "\e902";
+  }
 }
